fixing all error